--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Акватерапия RitmStyle">
     <title>RitmStyle</title>
 
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="css/styles.min.css">
 </head>
 <body>
@@ -17,11 +18,11 @@
                 <img src="icons/Logo.svg" alt="Logo" class="header__logo">
                 <div class="header__menu">
                     <ul>
-                        <li><a href="#">Главная</a></li>
+                        <li><a href="index.html">Главная</a></li>
                         <li><a href="#">Сеансы</a></li>
                         <li><a href="#">Отзывы</a></li>
                         <li><a href="#">Контакты</a></li>
-                        <li><a href="#">Новости</a></li>
+                        <li><a href="news.html">Новости</a></li>
                         <li><a href="#">Обо мне</a></li>
                         <li><a href="#">Блог</a></li>
                     </ul>
@@ -86,10 +87,51 @@
                     <div class="reviews__title_text">Отзывы</div>
                     <img src="icons/blue_left_leaf.svg" alt="leaf" class="title__leaf_left">
                 </div>
-
-                <div class="reviews__carousel"> 
-                    <h2>Здесь должна быть карусель</h2>
-                </div>
+            </div>
+            <div class="reviews__carousel"> 
+                <!-- <div class="swiper">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <div class="swiper-item">
+                          <h2>
+                            Александра Дмитриева
+                          </h2>
+                          <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
+                            laudantium excepturi quia id! Porro consectetur, minus ad
+                            nihil numquam aliquid, quasi quos saepe earum in itaque
+                            recusandae culpa excepturi tenetur.
+                          </p>
+                        </div>
+                      </div>
+                      <div class="swiper-slide">
+                        <div class="swiper-item">
+                          <h2>
+                            Кира Иванова
+                          </h2>
+                          <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
+                            laudantium excepturi quia id! Porro consectetur, minus ad
+                            nihil numquam aliquid, quasi quos saepe earum in itaque
+                            recusandae culpa excepturi tenetur.
+                          </p>
+                        </div>
+                      </div>
+                      <div class="swiper-slide">
+                        <div class="swiper-item">
+                          <h2>
+                            Яна Жернова
+                          </h2>
+                          <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
+                            laudantium excepturi quia id! Porro consectetur, minus ad
+                            nihil numquam aliquid, quasi quos saepe earum in itaque
+                            recusandae culpa excepturi tenetur.
+                          </p>
+                        </div>
+                      </div>
+                    <div class="swiper-pagination"></div>
+                  </div> -->
             </div>
         </section>
         
@@ -144,9 +186,9 @@
 
         <section class="prices">
             <div class="container">
-                <div class="about__title title">
+                <div class="prices__title title">
                     <img src="icons/blue_left_leaf.svg" alt="leaf" class="title__leaf_right"> 
-                    <div class="about__title_text">Стоимость сеансов</div>
+                    <div class="prices__title_text">Стоимость сеансов</div>
                     <img src="icons/blue_left_leaf.svg" alt="leaf" class="title__leaf_left">
                 </div>
 
@@ -195,13 +237,29 @@
                         <button class="contacts__btn">Записаться на сеанс</button>                        
                     </div>
                     <div class="contacts__item contacts__bcard">
-
+                        <h3 class="contacts__place">Бассейн "На Гороховой"</h3>
+                        <ul class="contacts__adress">
+                            <li>3-й проезд Иванова</li>
+                            <li>м. Крестовский остров</li>
+                            <li>Запись по договоренности</li>
+                        </ul>
+                        <button class="contacts__btn">Записаться на сеанс</button> 
                     </div>
                 </div>
-                
             </div>
         </section>
-
     </main>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__wrapper">
+                <div class="footer__copy">© 2018-2022 RitmStyle</div>
+                <div class="footer__made">Сделано d-e-n.info</div>    
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
