--- a/src/news.html
+++ b/src/news.html
@@ -19,15 +19,15 @@
                 <div class="header__menu">
                     <ul>
                         <li><a href="index.html">Главная</a></li>
-                        <li><a href="#">Сеансы</a></li>
-                        <li><a href="#">Отзывы</a></li>
-                        <li><a href="#">Контакты</a></li>
+                        <li><a href="#sessions">Сеансы</a></li>
+                        <li><a href="#reviews">Отзывы</a></li>
+                        <li><a href="#contacts">Контакты</a></li>
                         <li><a href="news.html">Новости</a></li>
-                        <li><a href="#">Обо мне</a></li>
+                        <li><a href="#about">Обо мне</a></li>
                         <li><a href="#">Блог</a></li>
                     </ul>
                 </div>
-                <button class="header__button">Записаться на сеанс</button>
+                <button class="header__button">Новости</button>
             </div>
             <hr>            
         </div>
@@ -40,7 +40,7 @@
 
                 <div class="news__title title">
                     <img src="icons/blue_left_leaf.svg" alt="leaf" class="title__leaf_right"> 
-                    <div class="news__title_text">Сеансы RitmStyle</div>
+                    <div class="news__title">Сеансы RitmStyle</div>
                     <img src="icons/blue_left_leaf.svg" alt="leaf" class="title__leaf_left">
                 </div>
 
@@ -48,7 +48,7 @@
 
                     <div class="news__item">
                         <div class="news__date">13.02.2022</div>                        
-                        <a href="#" class="news__name">Новый формат сеансов</a>
+                        <a href="news_new_format.html" class="news__name">Новый формат сеансов</a>
                     </div>
                     
                     <div class="news__item">
@@ -90,7 +90,5 @@
             </div>
         </div>
     </footer>
-    
-
 </body>
 </html>
