--- a/src/news.html
+++ b/src/news.html
@@ -24,7 +24,7 @@
                         <li><a href="#contacts">Контакты</a></li>
                         <li><a href="news.html">Новости</a></li>
                         <li><a href="#about">Обо мне</a></li>
-                        <li><a href="#">Блог</a></li>
+                        <li><a href="blog.html">Блог</a></li>
                     </ul>
                 </div>
                 <button class="header__button">Новости</button>
