--- a/src/index.html
+++ b/src/index.html
@@ -57,23 +57,38 @@
                 <div class="sessions__wrapper">
 
                     <div class="sessions__item">
+                        <div class="sessions__img">
+                            <img src="img/sessions_bg.png" alt="pool">
+                        </div>
                         <a href="#" class="sessions__name">Стандартный RitmStyle</a>
                     </div>
                     
                     <div class="sessions__item">
+                        <div class="sessions__img">
+                            <img src="img/sessions_bg_min.png" alt="pool">
+                        </div>
                         <a href="#" class="sessions__name">RitmStyle для пар</a>
                     </div>
 
                     <div class="sessions__item">
-                        <a href="#" class="sessions__name">RitmStyle с полным погружением под воду</a>
+                        <div class="sessions__img">
+                            <img src="img/sessions_bg_min.png" alt="pool">
+                        </div>
+                        <a href="#" class="sessions__name">RitmStyle с полным <br> погружением под воду</a>
                     </div>
                     
                     <div class="sessions__item">
+                        <div class="sessions__img">
+                            <img src="img/sessions_bg_min.png" alt="pool">
+                        </div>
                         <a href="#" class="sessions__name">RitmStyle для беременных</a>
                     </div>
 
                     <div class="sessions__item">
-                        <a href="#" class="sessions__name">RitmStyle + красочная подводная фотосессия</a>
+                        <div class="sessions__img">
+                            <img src="img/sessions_bg_min.png" alt="pool">
+                        </div>
+                        <a href="#" class="sessions__name">RitmStyle + красочная <br> подводная фотосессия</a>
                     </div>
                 </div>
             </div>
